@@ -52,6 +52,9 @@
 	/* Macros: */
 		/** ADC channel number for the microphone input. */
 		#define MIC_IN_ADC_CHANNEL        2
+		
+		/** ADC channel MUX mask for the microphone input. */
+		#define MIC_IN_ADC_MUX_MASK       ADC_CHANNEL2
 
 		/** Maximum ADC sample value for the microphone input. */
 		#define SAMPLE_MAX_RANGE          0xFFFF
